--- a/style.css
+++ b/style.css
@@ -24,5 +24,27 @@ body{
 
 }
 .texto{
+flex: 1;
+padding-right: 20px;
+padding-left: 2em;
+align-self: center;
+}
+.texto h2{
+    line-height: 2em;
+    margin-bottom: 1em;
+    text-align: center;
+}
+.texto p{
+    line-height: 2em;
+    margin-bottom: 1.5em;
+    
+}
+.imagem{
+    flex: 1;
+    text-align: center;
+    align-self: center;
 
+}
+.imagem img{
+    max: width 100px; ;
 }
