--- a/style.css
+++ b/style.css
@@ -1,50 +1,78 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+   margin: 0;
+   padding: 0;DM VFJRRTMTYMYUKY,U.HJ,Y,YHJF
+   box-sizing: border-box;
 }
+
+
 body{
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: red;
-    padding: 20px;
+   font-family: Arial, Helvetica, sans-serif;
+   line-height: 1.6;
+   background-color: #f0f0f0;
+   padding: 0;
 }
-.descricao{
-    text-align: center;
-    margin-bottom: 2em;
-}
-.secao{
-    max-width: 1200px;
-    margin: 0 auto;
-    box-shadow: 0 0 10px rgba(red, green, blue, alpha);
-    border-radius: 9px;
-    display: flex;
-    background-color: #dae2d8;
-    padding: 10px;
 
+
+.descriçao{
+   text-align: center;
+   margin-bottom: 2em;
 }
+
+
+.seçao{
+   max-width: 1200px;
+   margin: 0 auto;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+   border-radius: 9px;
+   display: flex;
+   background-color: #dae2d8;
+   padding: 10px;
+}
+
+
 .texto{
-flex: 1;
-padding-right: 20px;
-padding-left: 2em;
-align-self: center;
+   flex: 1;
+   padding-right: 20px;
+   padding-left: 2em;
+   align-self: center;
 }
-.texto h2{
-    line-height: 2em;
-    margin-bottom: 1em;
-    text-align: center;
-}
-.texto p{
-    line-height: 2em;
-    margin-bottom: 1.5em;
-    
-}
-.imagem{
-    flex: 1;
-    text-align: center;
-    align-self: center;
 
+
+.texto h2{
+   line-height: 2em;
+   margin-bottom: 1em;
+   text-align: center;
 }
+
+
+.texto p{
+   line-height: 2em;
+   margin-bottom: 1.5em;
+}
+
+
+.imagem{
+   flex: 1;
+   text-align: center;
+   align-self: center;
+}
+
+
 .imagem img{
-    max: width 100px; ;
+   max-width: 100%;
+   height: auto;
+   border-radius: 8px;
 }
+
+
+@media(max-width 100%) {
+.seçao{
+   flex-direction: column;
+}
+
+
+.texto, .imagem{
+   padding: 10px;
+}
+}
+
